<resources>
    <string name="app_name">DI RTPS</string>
    <string name="barcode">BarCode Number</string>
    <string name="scan_bar_code">Scan Bar Code</string>
    <string name="location_coordinates">Location Co-ordinates</string>
    <string name="add_to_details">Add to Details</string>
    <string name="back">Back</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="member_login">Sign In</string>
    <string name="login">LogIn</string>
    <string name="text">Enter your  details below to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="location_mapping">Location Mapping</string>
    <string name="details">Details</string>
    <string name="scanner_page">Mapping Portal</string>
    <string name="landing_page">Landing Screen</string>
    <string name="list_page">RTLS Localization</string>
    <string name="barcode_and_gps">BarCode and GPS</string>
    <string name="logout">Logout</string>
    <string name="co_ordinates">CO-Ordinates</string>
    <string name="rf_id">RF Id</string>
    <string name="list">List</string>
    <string name="pick_list">Pick List</string>
    <string name="short_list">Short List</string>
    <string name="view">View</string>
    <string name="pick">Pick</string>
    <string name="short_listed_items">Short Listed Items</string>
    <string name="unpick">UnPick</string>
    <string name="SenderId">522821978790</string>
    <string name="unp">Unpick</string>
</resources>
