<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bgr"
    android:layout_height="match_parent"
    tools:context=".DefaultActivity">

    <ImageView
        android:layout_width="113dp"
        android:layout_height="115dp"
       android:layout_marginTop="20dp"
        android:src="@drawable/logonamepng"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/intelliferImageView"
        />

    <Button
        android:id="@+id/mainActivityButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:padding="20dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/square_default_background"
        android:drawableTop="@drawable/ic_pin_drop_black_24dp"
        android:text="@string/barcode_and_gps"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintEnd_toStartOf="@id/listActivityButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intelliferImageView" />

    <Button
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/listActivityButton"
        android:background="@drawable/square_default_background"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/list"
        android:padding="20dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:drawableTop="@drawable/ic_view_list_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/intelliferImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toEndOf="@id/mainActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/square_default_background"
        android:drawableTop="@drawable/ic_arrow_back_black_24dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginRight="30dp"

        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pickListButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/pickListButton"
        android:background="@drawable/square_default_background"
        android:text="@string/short_list"
        android:textSize="12sp"
        android:layout_marginLeft="30dp"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:drawableTop="@drawable/ic_playlist_add_check_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logOutButton"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>