<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pickListConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/card">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/barCodePickListImageView"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/barCodePickListTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/barcode_icon"
                android:layout_marginLeft="5dp" />

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/barCodePickListImageView"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                android:id="@+id/rfidPickListImageView"-->
<!--                android:background="@drawable/rfid2" />-->


            <TextView
                android:id="@+id/barCodePickListTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/barCodePickListImageView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/barcode"

                android:layout_marginStart="10dp"

                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locationCoordinatesImageViewPickList"
                app:layout_constraintStart_toEndOf="@id/barCodePickListTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="90dp"
                android:background="@drawable/ic_place_black_24dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/rfIdPickListTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:hint="@string/rf_id"
                android:layout_marginLeft="10dp" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/pickButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationCoordinatesImageViewPickList"
                android:layout_marginEnd="30dp"
                android:textSize="10sp"
                android:textOff="@string/pick"
                android:textOn="@string/unpick"
                android:layout_marginRight="30dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>