<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgr"
    tools:context=".Login_Activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoImageViewLogin"
        android:layout_width="113dp"
        android:layout_height="115dp"
        android:src="@drawable/logonamepng"
        android:background="@color/white"
        android:backgroundTint="@color/white"

        app:layout_constraintBottom_toTopOf="@id/memberLoginTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        />




    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/userNameImageView"
        app:layout_constraintTop_toBottomOf="@id/LoginTextView"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toTopOf="@id/passWordImageView"
        app:layout_constraintEnd_toStartOf="@id/userNameEditText"
        android:src="@drawable/ic_person_outline_black_24dp"
        android:layout_marginLeft="36dp" />


    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/passWordImageView"
        app:layout_constraintTop_toBottomOf="@id/userNameImageView"
        app:layout_constraintEnd_toStartOf="@id/passWordEditText"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_lock_outline_black_24dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/memberLoginTextView"
        app:layout_constraintStart_toStartOf="parent"

        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoImageViewLogin"
        android:textAlignment="center"
        android:text="@string/login"
        android:layout_marginLeft="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginTextView"
        android:text="@string/text"
        android:textSize="17sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"


        app:layout_constraintTop_toBottomOf="@+id/memberLoginTextView"/>




    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/userNameEditText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/userNameImageView"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/passWordEditText"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/LoginTextView"
        android:hint="@string/username"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/passWordEditText"
        app:layout_constraintStart_toEndOf="@id/passWordImageView"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText"
        android:hint="@string/password"
        />



    <Button
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:id="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/passWordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/blue_oval"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:layout_margin="30dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>