<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    android:id="@+id/MainActivity"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="113dp"
        android:layout_height="115dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:src="@drawable/logonamepng"
        app:layout_constraintBottom_toTopOf="@id/barCodeTextView1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barCodeTextView1"
        android:text="@string/barcode"
        android:textSize="20dp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@id/barCodeTextView2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/barCodeTextView2"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:drawableLeft="@drawable/ic_scanner_black_24dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/white"
        android:paddingVertical="7dp"
        android:background="@drawable/border"
        android:hint="@string/barcode"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/compassTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barCodeTextView1"
        android:layout_marginLeft="16dp" />


    <TextView
        android:id="@+id/compassTextView"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/border"
        android:hint="Compass TextView"
        android:paddingVertical="7dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/buttonScan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barCodeTextView1"
        android:layout_marginLeft="16dp" />


    <Button
        android:id="@+id/buttonScan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:background="@drawable/blue_oval"
        android:text="@string/scan_bar_code"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@id/coordinatesTextView3"
        app:layout_constraintTop_toBottomOf="@id/compassTextView"
         />

    <TextView
        android:id="@+id/coordinatesTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_coordinates"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/buttonScan"
        app:layout_constraintBottom_toTopOf="@id/coordinatesTextView4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp" />


    <TextView
        android:id="@+id/coordinatesTextView4"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:background="@drawable/border"
        android:hint="@string/location_coordinates"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:textAlignment="textStart"
        android:paddingVertical="7dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinatesTextView3"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/coordinatesButton"
        android:gravity="start"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/coordinatesButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/blue_oval"
        android:text="@string/location_coordinates"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@id/detailsButton"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinatesTextView4" />

    <Button
        android:id="@+id/detailsButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/save_button_background"
        android:text="@string/save_amp_continue"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinatesButton" />


</androidx.constraintlayout.widget.ConstraintLayout>